fix mobile overflow more aggressively

--- a/src/components/YaeBookstore.module.css
+++ b/src/components/YaeBookstore.module.css
@@ -1748,6 +1748,7 @@
   /* disable carousel on mobile - just show first slide */
   .carouselTrack {
     transform: none !important;
+    width: 100% !important;
   }
   
   .banner:not(:first-child) {
@@ -1764,11 +1765,13 @@
   
   .carousel {
     max-width: 100%;
+    overflow: hidden;
   }
   
   .banner {
     max-width: 100%;
     min-width: 0;
+    width: 100%;
   }
   
   .banner img {
@@ -1776,8 +1779,20 @@
     width: 100%;
   }
   
+  .bannerOverlay {
+    max-width: 100%;
+  }
+  
   .bannerTitle {
     word-wrap: break-word;
+  }
+  
+  .container {
+    overflow-x: hidden;
+  }
+  
+  .main {
+    overflow-x: hidden;
   }
 }
 
